Support CLOUDINARY_URL env for Cloudinary config

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,11 @@ PORT=10000
 # MONGODB_URI=mongodb+srv://USER:PASS@cluster0.dvmmnet.mongodb.net/sweet_memories?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_URI=
 
-# Cloudinary
+# Cloudinary (choose ONE style)
+# 1) Separate vars (recommended)
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+# 2) Or single URL form (Cloudinary standard, e.g. cloudinary://KEY:SECRET@CLOUD_NAME)
+# CLOUDINARY_URL=
